--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>New Project</h1>
     <img src="3-PARKINFO.jpg" alt="">
+    <img src="3-PARKINFO.jpg" alt="">
+    <img src="https://i.ytimg.com/vi/a0Xaa9qjgpQ/maxresdefault.jpg" alt="">
 </body>
 </html>
