--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>New Project</h1>
     <img src="3-PARKINFO.jpg" alt="">
-    <h1>My blog</h1>
+    <h1>My Tour blog</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nemo reprehenderit delectus esse cupiditate, commodi sed itaque nobis distinctio dicta quibusdam, laborum maiores sunt ad error quae magni perspiciatis! Nemo.</p>
     <img src="https://i.ytimg.com/vi/a0Xaa9qjgpQ/maxresdefault.jpg" alt="">
 </body>
